--- a/portfolio.html
+++ b/portfolio.html
@@ -57,9 +57,9 @@
             <div class="col-xs-12 col-sm-12 col-md-6">
           
               <div class="work">
-                <img src="file/images/technics-q-c-640-480-1.jpg" alt="Word Guess">
+               <a href="https://alex-preissler.github.io/Word-Guess-Game/"><img src="file/images/word-guess-game.jpg" alt="Word Guess"></a>
                 
-                <h3>Word Guess</h3>
+              <a href="https://alex-preissler.github.io/Word-Guess-Game/"><h3>Word Guess</h3></a>
               </div>
             </div>
             <div class="col-xs-12 col-sm-12 col-md-6">
