--- a/portfolio.html
+++ b/portfolio.html
@@ -65,9 +65,9 @@
             <div class="col-xs-12 col-sm-12 col-md-6">
                 
               <div class="work">
-                  <img src="file/images/technics-q-c-640-480-2.jpg" alt="RPG Game">
+                  <a href="https://alex-preissler.github.io/Unit-4-Game/"><img src="file/images/crystal-game.jpg" alt="Crystal Game"></a>
 
-                  <h3>RPG Game</h3>
+                  <a href="https://alex-preissler.github.io/Unit-4-Game/"><h3>Crystal Game</h3></a>
               </div>
             </div>
           </div>
