--- a/portfolio.html
+++ b/portfolio.html
@@ -65,7 +65,7 @@
             <div class="col-xs-12 col-sm-12 col-md-6">
                 
               <div class="work">
-                  <a href="https://alex-preissler.github.io/Unit-4-Game/"><img src="file/images/crystal-game.jpg" alt="Crystal Game"></a>
+                  <a href="https://alex-preissler.github.io/Unit-4-Game/"><img src="file/images/crystal-game.JPG" alt="Crystal Game"></a>
 
                   <a href="https://alex-preissler.github.io/Unit-4-Game/"><h3>Crystal Game</h3></a>
               </div>
@@ -76,9 +76,9 @@
           <div class="row">
             <div class="col-xs-12 col-sm-12 col-md-6">
               <div class="work">
-                <img src="file/images/technics-q-c-640-480-5.jpg" alt="Trivia Game">
+                <a href="https://alex-preissler.github.io/TriviaGame/"><img src="file/images/trivia-game.JPG" alt="Trivia Game"></a>
 
-                <h3>Trivia Game</h3>
+                <a href="https://alex-preissler.github.io/TriviaGame/"><h3>Trivia Game</h3></a>
               </div>
             </div>
             <div class="col-xs-12 col-sm-12 col-md-6">
